--- a/Seminararbeit.tex
+++ b/Seminararbeit.tex
@@ -309,11 +309,23 @@ Dies erleichtert die Beobachtung des Finanzmarktes, da nicht nur aktuelle Zahlen
 % \newpage
 \section{Literaturverzeichnis}
 
-Duffie, D., 1999. Credit swap valuation. Financial Analysts Journal 55, 73-87.
+Huang, X., Zhou, H., Zhu, H., 2009. A Framework for Assessing the Systemic Risk of
 
+Major Financial Institutions. Bank for International Settlements Working Papers  No
+
+281.
+\newline
+\newline
+Duffie, D., 1999. Credit swap valuation. Financial Analysts Journal 55, 73-87.
+\newline
+\newline
 Tarashev, N., Zhu, H., 2008. The pricing of portfolio credit risk: Evidence from
 
- the credit derivatives Market. Journal of Fixed Income 18, 5-24.
+the credit derivatives Market. Journal of Fixed Income 18, 5-24.
+\newline
+\newline
+Hull, John and Alan White (2004), “Valuation of a CDO and an n-th to default CDS 
 
+without Monte Carlo simulation,” Journal of Derivatives, vol. 12, 8–23
 
 \end{document}
